--- a/public/main.css
+++ b/public/main.css
@@ -280,12 +280,24 @@ form {
 
 
 
+
 /* calendar styling */
 
+.calendarPage {
+  background-image: url("/images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 1700px;
+  z-index: 0;
+}
+
 .calendar {
-  margin-left: 200px;
-  margin-right: 200px;
+  /* margin-left: 200px; */
+  /* margin-right: 200px; */
+  padding-top: 380px;
   background-color: rgba(255, 0, 0, 0.226);
+  z-index: 3;
 }
 
 .row {
@@ -293,6 +305,7 @@ form {
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
+  z-index: 3;
 }
 
 .column {
@@ -300,18 +313,22 @@ form {
   flex-direction: column;
   flex-basis: 100%;
   flex: 1;
+  z-index: 3;
 }
 
 .blue-column {
   border-color: rgba(0, 0, 255, 0.267);
+  z-index: 3;
 }
 
 .green-column {
   border-color: rgba(0, 128, 0, 0.295);
+  z-index: 3;
 }
 
 .green-column, .blue-column {
   border-style: solid;
   border-width: 5px;
-  height: 180px;
+  height: 320px;
+  z-index: 3;
 }
