--- a/views/addRosteredDay.hbs
+++ b/views/addRosteredDay.hbs
@@ -1,7 +1,7 @@
 <h2>Pick a day, any day, but perhaps a day that no one else is cooking!</h2>
 <h3 class="centerText" >Select a day of the week you would like to cook on. Ideally not on a Friday or a Saturday as people are usually out and about on these days.</h3>
 
-<form action="/selectDay/:id" method="POST"> 
+<form action="/selectDay/{{user_id}}" method="POST"> 
 <section>
     What day would you like to cook on?
       <select class="button buttonDropdown" name="days">
